test/111.txt
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task2\LR1Parser.cpp:19: error: invalid use of incomplete type 'class QDebug'
..\..\src\task2\LR1Parser.cpp: In function 'QString actionFor(const LR1ActionTable&, int, const QString&)':
..\..\src\task2\LR1Parser.cpp:19:11: error: invalid use of incomplete type 'class QDebug'
   19 |     qDebug() << "actionFor - state:" << st << "token:" << a << "action:" << action;
E:\Qt\6.10.1\mingw_64\include\QtCore\qglobal.h:45: In file included from E:/Qt/6.10.1/mingw_64/include/QtCore/qglobal.h:45,
In file included from E:/Qt/6.10.1/mingw_64/include/QtCore/qglobal.h:45,
                 from E:/Qt/6.10.1/mingw_64/include/QtCore/qchar.h:8,
                 from E:/Qt/6.10.1/mingw_64/include/QtCore/qstring.h:15,
                 from E:/Qt/6.10.1/mingw_64/include/QtCore/QString:1,
                 from ../../include/task2/LR1Parser.h:14,
                 from ..\..\src\task2\LR1Parser.cpp:13:
E:/Qt/6.10.1/mingw_64/include/QtCore/qtypeinfo.h:15:7: note: forward declaration of 'class QDebug'
   15 | class QDebug;
      |       ^~~~~~
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task2\LR1Parser.cpp:23: error: invalid use of incomplete type 'class QDebug'
..\..\src\task2\LR1Parser.cpp:23:15: error: invalid use of incomplete type 'class QDebug'
   23 |         qDebug() << "  No action found for state:" << st << "and token:" << a;
E:/Qt/6.10.1/mingw_64/include/QtCore/qtypeinfo.h:15:7: note: forward declaration of 'class QDebug'
   15 | class QDebug;
      |       ^~~~~~
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task2\LR1Parser.cpp:27: error: invalid use of incomplete type 'class QDebug'
..\..\src\task2\LR1Parser.cpp:27:19: error: invalid use of incomplete type 'class QDebug'
   27 |             qDebug() << "  Available actions for state" << st << ":";
E:/Qt/6.10.1/mingw_64/include/QtCore/qtypeinfo.h:15:7: note: forward declaration of 'class QDebug'
   15 | class QDebug;
      |       ^~~~~~
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task2\LR1Parser.cpp:32: error: invalid use of incomplete type 'class QDebug'
..\..\src\task2\LR1Parser.cpp:32:23: error: invalid use of incomplete type 'class QDebug'
   32 |                 qDebug() << "    " << symbolIt.key() << " -> " << symbolIt.value();
E:/Qt/6.10.1/mingw_64/include/QtCore/qtypeinfo.h:15:7: note: forward declaration of 'class QDebug'
   15 | class QDebug;
      |       ^~~~~~
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task2\LR1Parser.cpp:34: error: invalid use of incomplete type 'class QDebug'
..\..\src\task2\LR1Parser.cpp:34:19: error: invalid use of incomplete type 'class QDebug'
   34 |             qDebug() << "  Expected tokens: " << availableTokens.join(", ");
E:/Qt/6.10.1/mingw_64/include/QtCore/qtypeinfo.h:15:7: note: forward declaration of 'class QDebug'
   15 | class QDebug;
      |       ^~~~~~
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task2\LR1Parser.cpp:36: error: invalid use of incomplete type 'class QDebug'
..\..\src\task2\LR1Parser.cpp:36:19: error: invalid use of incomplete type 'class QDebug'
   36 |             qDebug() << "  State" << st << "not found in action table";
E:/Qt/6.10.1/mingw_64/include/QtCore/qtypeinfo.h:15:7: note: forward declaration of 'class QDebug'
   15 | class QDebug;
      |       ^~~~~~
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task2\LR1Parser.cpp:125: warning: unused parameter 'g' [-Wunused-parameter]
..\..\src\task2\LR1Parser.cpp: In static member function 'static ParseResult LR1Parser::parse(QVector<QString>&, const Grammar&, const LR1ActionTable&)':
..\..\src\task2\LR1Parser.cpp:125:54: warning: unused parameter 'g' [-Wunused-parameter]
  125 |                              const Grammar&          g,
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~^
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task2\LR1Parser.cpp:48: warning: 'QVector<QString> tokenize(const QString&)' defined but not used [-Wunused-function]
..\..\src\task2\LR1Parser.cpp: At global scope:
..\..\src\task2\LR1Parser.cpp:48:25: warning: 'QVector<QString> tokenize(const QString&)' defined but not used [-Wunused-function]
   48 | static QVector<QString> tokenize(const QString& s)
      |                         ^~~~~~~~
:-1: error: [Makefile.Debug:3816: debug/LR1Parser.o] Error 1